# scnlib

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  ato.cpp  boost_lexical_cast.cpp  boost_qi.cpp  input.h  iostream.cpp  scanf.cpp  scn_parse.cpp  sto.cpp  strto.cpp
bench/detail/: warning.h
include/scn/: scn.hpp
